# GentenMPI

./: CMakeLists.txt  README.md  copyright.txt
cmake/: FindSPLATT.cmake  FindTTB.cmake
data/: simple.tns
docs/report/: .gitignore  00_MAIN.tex  00_abstract.tex  00_ack.tex  01_intro.tex  02_trilinos.tex  03_classes.tex  04_mttkrp.tex  05_cpals.tex  06_gcpsgd.tex  07_conclusion.tex  SANDreport.cls  refs.bib  tammy_setup.tex
docs/report/data/amazon_scaling/amazon_moresamples_splattdecomp/: qqr.0004  qqr.0008  qqr.0016  qqr.0032  qqr.0064  qqr.0128  qqr_out.0008  qqr_out.0016  qqr_out.0032  qqr_out.0064  qqr_out.0128
docs/report/data/amazon_scaling/amazon_moresamples_uniformBox/: qqr.0004  qqr.0008  qqr.0016  qqr.0032  qqr.0064  qqr.0128  qqr_out.0008  qqr_out.0016  qqr_out.0032  qqr_out.0064  qqr_out.0128
docs/report/data/convergence/skybridge_scripts/: amazon_qqr.0016  amazon_qqr_out.0016  chicago_genten  chicago_genten_out  chicago_qqr.0001  chicago_qqr_out.0001  lbnl_qqr.0001  lbnl_qqr_out.0001
docs/report/data/lbnl_scaling/lbnl_boxdecomp/: qq.lbnl.0001  qq.lbnl.0002  qq.lbnl.0004  qq.lbnl.0008  qq.lbnl.0016  qq.lbnl.0032  qq.lbnl.0064  qq_out.lbnl.0001  qq_out.lbnl.0002  qq_out.lbnl.0004  qq_out.lbnl.0008  qq_out.lbnl.0016  qq_out.lbnl.0032  qq_out.lbnl.0064
docs/report/data/lbnl_scaling/lbnl_genten/: qq.openmp.atomic  qq.openmp.default  qq.openmp.duplicated  qq.openmp.kokkos  qq.openmp.perm  qq_out.lbnl.openmp.atomic  qq_out.lbnl.openmp.default  qq_out.lbnl.openmp.duplicated  qq_out.lbnl.openmp.kokkos  qq_out.lbnl.openmp.perm
docs/report/data/lbnl_scaling/lbnl_splattdecomp/: qq.lbnl.0001  qq.lbnl.0002  qq.lbnl.0004  qq.lbnl.0008  qq.lbnl.0016  qq.lbnl.0032  qq.lbnl.0064  qq_out.lbnl.0001  qq_out.lbnl.0002  qq_out.lbnl.0004  qq_out.lbnl.0008  qq_out.lbnl.0016  qq_out.lbnl.0032  qq_out.lbnl.0064
docs/report/data/random_scaling/: qq.0256M.0001  qq.0256M.0002  qq.0256M.0004  qq.0256M.0008  qq.0256M.0016  qq.0256M.0032  qq.0256M.0064  qq.0256M.openmp.atomic  qq.0256M.openmp.default  qq.0256M.openmp.duplicated  qq.0256M.openmp.kokkos  qq.0256M.openmp.perm  qq_out.0256M.0001  qq_out.0256M.0002  qq_out.0256M.0004  qq_out.0256M.0008  qq_out.0256M.0016  qq_out.0256M.0032  qq_out.0256M.0064  qq_out.0256M.openmp.atomic  qq_out.0256M.openmp.default  qq_out.0256M.openmp.duplicated  qq_out.0256M.openmp.kokkos  qq_out.0256M.openmp.perm
perf_test/: CMakeLists.txt  copy.cpp  copymv.cpp  pt_adam.cpp  pt_cpals.cpp  pt_read.hpp  pt_read_by_box.hpp  pt_rebalance.hpp  pt_rebalance.hpp.mvec
scripts_cmake/: householder_layoutleft  mac_layoutleft  mac_layoutright  skybridge_layoutleft  skybridge_layoutright
scripts_tpls/: householder_ttb  mac_splatt  mac_trilinos  mac_ttb  skybridge_genten  skybridge_splatt_mpi_only  skybridge_splatt_mpi_openmp  skybridge_splatt_openmp_only  skybridge_trilinos  skybridge_ttb
src/: CMakeLists.txt  LRMV_NOTES.txt  interesting_map_stuff_not_needed.txt  matrix_stats.cpp  pt_adam.hpp  pt_config.h.in  pt_factormatrix.hpp  pt_gram.hpp  pt_ktensor.hpp  pt_lossfns.hpp  pt_lrmv_decl.hpp  pt_lrmv_def.hpp  pt_lrmv_fwd.hpp  pt_mixed.hpp  pt_random.hpp  pt_samplingstrategies.hpp  pt_shared.h  pt_sptensor.hpp  pt_sptensor_boundingbox.hpp  pt_squarelocalmatrix.hpp  pt_system.hpp  pt_tensorhash.hpp  pt_tiebreak.hpp
test/: CMakeLists.txt  pt_multivec.cpp  pt_test_adam.cpp  pt_test_compare.cpp  pt_test_compare.hpp  pt_test_cpals.cpp  pt_test_distFromGenerators.hpp  pt_test_distFromRandom.hpp  pt_test_factormatrix.cpp  pt_test_generators.hpp  pt_test_gram.cpp  pt_test_gram_draft.cpp  pt_test_innerprod.cpp  pt_test_ktensor.cpp  pt_test_mixed.cpp  pt_test_modeleval.cpp  pt_test_mttkrp.cpp  pt_test_random.cpp  pt_test_sampledError.cpp  pt_test_sampledSptensor.cpp  pt_test_sptensor.cpp  pt_test_sptensor_boundingbox.cpp  pt_test_stocGrad.cpp  pt_test_system.cpp  pt_test_tensorhash.cpp  pt_test_ttbFromGenerators.hpp  pt_test_warmstart_factormatrix.cpp  pt_test_warmstart_ktensor.cpp
