INCLUDE(CheckCXXSourceCompiles)
set(CMAKE_REQUIRED_INCLUDES ${Trilinos_INCLUDE_DIRS})
set(CMAKE_REQUIRED_LIBRARIES ${Trilinos_LIBRARY_DIRS})
set(CMAKE_REQUIRED_FLAGS ${Trilinos_CXX_FLAGS} )

SET(HEADERS "")
SET(SOURCES "")

FILE(GLOB KDD_HPPFILES ${CMAKE_CURRENT_SOURCE_DIR}/src *.hpp)
LIST(APPEND HEADERS ${KDD_HPPFILES})
FILE(GLOB KDD_HFILES ${CMAKE_CURRENT_SOURCE_DIR}/src *.h)
LIST(APPEND HEADERS ${KDD_HFILES})
LIST(APPEND HEADERS ${CMAKE_CURRENT_BINARY_DIR}/pt_config.h)

FILE(GLOB KDD_CPPFILES ${CMAKE_CURRENT_SOURCE_DIR}/src *.cpp)
LIST(APPEND SOURCES ${KDD_CPPFILES})
FILE(GLOB KDD_CFILES ${CMAKE_CURRENT_SOURCE_DIR}/src *.c)
LIST(APPEND SOURCES ${KDD_CFILES})

#INCLUDE_DIRECTORIES(
#  ${Trilinos_INCLUDE_DIRS}
#  ${Trilinos_TPL_INCLUDE_DIRS}
#  ${CMAKE_CURRENT_SOURCE_DIR}/src
#  ${CMAKE_CURRENT_BINARY_DIR}
#)

#ADD_LIBRARY(
#  pt
#  ${KDD_LIBRARY_TYPE}
#  ${SOURCES}
#)
